<resources>
    <string name="app_name">LoginProtoDataStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="name_and_surname">Name And Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <string name="name_email_password">name, e-mail and password cannot be empty</string>
    <string name="email_password">E-mail and password cannot be empty</string>
    <string name="name">name cannot be empty</string>
    <string name="email_cont">e-mail cannot be empty</string>
    <string name="password_cont">password cannot be empty</string>
    <string name="not_register">you not have register</string>


</resources>